--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miniblog",
   "version": "0.1.0",
-  "homepage": "github-page/",
+  "homepage": "miniBlog/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
